# mfdr

./: Cargo.toml  Makefile  README.md
.github/workflows/: release.yaml  rust.yml
src/: main.rs
